--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "homepage": "https://kimnerd91.github.io/portfolio",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+  "build": "vue-cli-service build",
+  "lint": "vue-cli-service lint",
+  "deploy": "gh-pages -d dist"
   },
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist",
   "dependencies": {
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
